# relation-algebra

./: .gitignore  AUTHORS  CHANGELOG  CONTRIBUTORS  CodeMeta.json  LICENSE  META.coq-relation-algebra  Make  Makefile  Makefile.coq.local-late  README  README.md  TODO.txt  _CoqProject  _RocqProject  all.v  atoms.v  bmx.v  boolean.v  common.v  comparisons.v  compiler_opts.v  configure  coq-relation-algebra.opam  denum.v  deps.sh  description  dfa.v  dune  dune-project  factors.v  fhrel.v  g_kat_reification.mlg  g_mrewrite.mlg  g_ra_fold.mlg  g_ra_fold.mli  g_ra_reification.mlg  glang.v  gregex.v  imp.v  (+62 more)
.github/workflows/: build-relation-algebra.yml
examples/: compiler_opts.v  imp.v  paterson.v
src/: META.coq-relation-algebra  META.rocq-relation-algebra  common.ml  common.mli  fold.ml  fold.mli  fold_g.ml  fold_g.mlg  kat_dec.ml  kat_dec.mli  kat_reification.ml  kat_reification.mli  kat_reification_g.ml  kat_reification_g.mlg  mrewrite.ml  mrewrite.mli  mrewrite_g.ml  mrewrite_g.mlg  packed_fold.mlpack  packed_kat.mlpack  packed_mrewrite.mlpack  ra_plugin_common.ml  ra_plugin_common.mllib  ra_plugin_reification.mlpack  reification.ml  reification.mli  reification_g.ml  reification_g.mlg
theories/: atoms.v  bmx.v  boolean.v  common.v  comparisons.v  denum.v  dfa.v  factors.v  fhrel.v  glang.v  gregex.v  ka_completeness.v  kat.v  kat_completeness.v  kat_reification.v  kat_tac.v  kat_untyping.v  kleene.v  lang.v  lattice.v  level.v  lset.v  lsyntax.v  matrix.v  matrix_ext.v  monoid.v  move.v  nfa.v  normalisation.v  ordinal.v  pair.v  positives.v  powerfix.v  prop.v  regex.v  rel.v  relalg.v  rewriting.v  rewriting_aac.v  rmx.v  (+8 more)
