(env
 (dev     (flags :standard -rectypes -w -9-27+40+60 -warn-error -3))
 (release (flags :standard -rectypes)
          (ocamlopt_flags -O3 -unbox-closures)))

(coq.pp (modules fold reification mrewrite kat_reification))

(library
 (name common)
 (public_name relation-algebra.common)
 (modules common)
 (libraries coq.plugins.ltac))

(library
 (name fold)
 (public_name relation-algebra.fold)
 (modules fold fold_g)
 (libraries common))

(library
 (name reification)
 (public_name relation-algebra.reification)
 (modules reification reification_g)
 (libraries common))

(library
 (name mrewrite)
 (public_name relation-algebra.mrewrite)
 (modules mrewrite mrewrite_g)
 (libraries common))

(library
 (name kat_reification)
 (public_name relation-algebra.kat_reification)
 (modules kat_dec kat_reification kat_reification_g)
 (libraries common))

(coq.theory
 (name RelationAlgebra)
 (public_name relation-algebra)
 (modules :standard \ fhrel)
 (flags
   -w -projection-no-head-constant
   -w -notation-overridden
   -w -redundant-canonical-projection
   )
 (libraries fold reification mrewrite kat_reification))
