opam-version: "2.0"
synopsis: "Relation Algebra and KAT in Rocq"
name: "coq-relation-algebra"
maintainer: "Damien Pous <Damien.Pous@ens-lyon.fr>"
#TO SET BEFORE RELEASE
version: "dev"
homepage: "http://perso.ens-lyon.fr/damien.pous/ra/"
dev-repo: "git+https://github.com/damien-pous/relation-algebra.git"
bug-reports: "https://github.com/damien-pous/relation-algebra/issues"
license: "LGPL-3.0-or-later"
depends: [
  "ocaml"
#TO SET BEFORE RELEASE
  "rocq-core" {>= "9.0.0"}
  "rocq-stdlib"
]
depopts: [ "rocq-mathcomp-ssreflect" "rocq-aac-tactics" ]
build: [
  ["sh" "-exc" "./configure --%{rocq-mathcomp-ssreflect:enable}%-ssr --%{rocq-aac-tactics:enable}%-aac"]
  [make "-j%{jobs}%"]
]
install: [make "install"]
tags: [
  "keyword:relation algebra"
  "keyword:kleene algebra with tests"
  "keyword:kat"
  "keyword:allegories"
  "keyword:residuated structures"
  "keyword:automata"
  "keyword:regular expressions"
  "keyword:matrices"
  "category:Mathematics/Algebra" 
  "logpath:RelationAlgebra" ]
authors: [
  "Damien Pous <Damien.Pous@ens-lyon.fr>"
  "Christian Doczkal <christian.doczkal@ens-lyon.fr>"
]


## CHECK BEFORE RELEASING:
# CHANGELOG
# README.md
# webpage
# above updates to the opam file in coq-opam-archive
